// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppWrapper /> Should render correctly 1`] = `
<div>
  <div
    class="app__app-wrapper"
  >
    <div>
      some text
    </div>
  </div>
</div>
`;

exports[`<AppWrapper /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="app__app-wrapper test-custom-classname"
  >
    <div>
      some text
    </div>
  </div>
</div>
`;
